Shortened animation to fade in from none on user section

--- a/src/app/components/utility/sidebar/sidebar.component.scss
+++ b/src/app/components/utility/sidebar/sidebar.component.scss
@@ -97,6 +97,13 @@ li{
     display: block;
 }
 
+#sidebar #user-section .on-hover-show{
+    -webkit-animation: fadeInFromNone 0.2s ease-out;
+    -moz-animation: fadeInFromNone 0.2s ease-out;
+    -o-animation: fadeInFromNone 0.2s ease-out;
+    animation: fadeInFromNone 0.2s ease-out;
+}
+
 
 li a{
     height: 100%;
