Updated an icon

--- a/src/app/components/utility/sidebar/sidebar.component.html
+++ b/src/app/components/utility/sidebar/sidebar.component.html
@@ -9,12 +9,12 @@
         </h3>
     </a>
 
-        <!-- Sidebar Items -->
+    <!-- Sidebar Items -->
     <ul>
         <!-- User Section. This is a menu-container, it's title identified by "container-title" class, which is relevant for swipe gesture behaviour, see app.component.ts -->
         <li id="user-section" [ngClass]="{'active': showUserSection}">
             <a class="pointer" (click)="showUserSection = !showUserSection">
-                <i class="fa fa-user"></i>
+                <i class="fa fa-user-circle"></i>
                 <span class="on-hover-show container-title">
                     User
                     <span *ngIf="tokenService.isAdmin()"> & Admin</span>
@@ -56,10 +56,6 @@
 
             </ul>
         </li>
-        
-        <!-- Admin Section -->
-
-
 
         <!-- Sidebar Entries -->
         <li *ngFor="let entry of sidebarEntries">
