made border of sidebar outset for aesthetic reasons

--- a/src/app/components/utility/sidebar/sidebar.component.scss
+++ b/src/app/components/utility/sidebar/sidebar.component.scss
@@ -10,7 +10,7 @@
 
     border-right-color: white;
     border-right-width: 1px;
-    border-right-style: inset;
+    border-right-style: outset;
 }
 
 @media (hover: hover) and (pointer: fine) {
