Fixed it so that user section gets propper fadeInFromNone animation (0.6s duration)

--- a/src/app/components/utility/sidebar/sidebar.component.scss
+++ b/src/app/components/utility/sidebar/sidebar.component.scss
@@ -98,7 +98,7 @@ li{
     display: block;
 }
 
-#sidebar #user-section .on-hover-show{
+#sidebar #user-list .on-hover-show{
     -webkit-animation: fadeInFromNone 0.2s ease-out;
     -moz-animation: fadeInFromNone 0.2s ease-out;
     -o-animation: fadeInFromNone 0.2s ease-out;
