Implemented "scroll into view" on spells

--- a/src/app/components/articles/spells/spells.component.html
+++ b/src/app/components/articles/spells/spells.component.html
@@ -15,6 +15,8 @@
         <!-- Spells -->
         <div *ngFor="let spell of spells; let i = index">
             <app-spell
+            #spellElements
+            [id]="spell.name.replaceAll(' ', '-').replaceAll('\'', '')"
             [index] = "i"
             [cardData] = "spell"
             (cardDelete) = "onSpellDelete(i)"
