Added rule auto-open + scroll to feature
When using the "name" url param, you can now specify which rule to scroll to and open on page load.

--- a/src/app/components/articles/rules/rules.component.html
+++ b/src/app/components/articles/rules/rules.component.html
@@ -9,6 +9,7 @@
         <!-- Rules -->
         <div *ngFor="let rule of rules; let i = index">
             <app-rule
+            #ruleElements
             [cardData] = "rule"
             [index] = "i"
             (cardDelete) = "onRuleDelete(i)"
