--- a/src/app/components/articles/map/map.component.html
+++ b/src/app/components/articles/map/map.component.html
@@ -1,4 +1,4 @@
-<div class="main" #mapMainCard>
+<div class="main">
     <article *ngIf="maps && articleData; else loading" class="container">
         <!-- Heading -->
         <div class="row" *ngIf="userHasUpdatePermission()">
