Changed search button to a submitbutton since submit triggers search

--- a/src/app/components/home2/home2.component.html
+++ b/src/app/components/home2/home2.component.html
@@ -26,9 +26,9 @@
                 [(ngModel)]="searchString" 
                 placeholder="Search For Articles..." 
                 aria-label="Search">
-                <div class="btn btn-primary" (click)="search()">
+                <button type="submit" class="btn btn-primary">
                     <i class="fa fa-search p-2"></i>
-                </div>
+                </button>
             </div>
 
         </form>
