Updated permission checking
Now no longer the function is being used to determine access permission, instead a cached value is being used.

--- a/src/app/components/articles/article-overview/article-overview.component.html
+++ b/src/app/components/articles/article-overview/article-overview.component.html
@@ -33,7 +33,7 @@
         </div>
 
         <!-- Adding Item button -->
-        <div class="mb-3 row" *ngIf="userHasCreatePermission()">
+        <div class="mb-3 row" *ngIf="hasCreatePermission">
             <a class="btn btn-primary col-lg-2 col-sm-3" routerLink="create"> 
                 <i class="fa fa-plus"></i>
                 Add {{ overviewType | titlecase }}
