--- a/src/app/components/utility/rule/rule.component.html
+++ b/src/app/components/utility/rule/rule.component.html
@@ -20,7 +20,7 @@
         
                 <!-- Edit Toggler -->
                 <div 
-                *ngIf="userHasUpdatePermission()" 
+                *ngIf="hasUpdatePermission"
                 class="btn btn-secondary float-right" 
                 (click)="toggleFormState()"
                 >
