--- a/src/app/components/articles/session-audio/session-audio.component.html
+++ b/src/app/components/articles/session-audio/session-audio.component.html
@@ -1,6 +1,6 @@
 <div class="main">
     <article *ngIf="sessionAudio; else loading" class="container">
-        <div class="row" *ngIf="userHasUpdatePermission()">
+        <div class="row" *ngIf="hasUpdatePermission">
             <div class="col-12">
                 <app-edit-toggle 
                 [isInUpdateState]=false 
@@ -67,7 +67,7 @@
         <div class="row justify-content-center mb-3">
             <div 
             class="btn btn-primary mx-auto col-lg-4" 
-            *ngIf = "userHasCreatePermission()"
+            *ngIf = "hasCreatePermission"
             (click)="createTimestampEventSubject.next(this.vimePlayer.currentTime)"
             >
                 Add Timestamp <i class="fa fa-clock-o ml-1"></i>
