--- a/src/app/components/utility/diary-entry-encounter-list/diary-entry-encounter-list.component.html
+++ b/src/app/components/utility/diary-entry-encounter-list/diary-entry-encounter-list.component.html
@@ -1,6 +1,6 @@
 <div class="container px-0" *ngIf="!isUpdating; else waiting">
     <div class="d-flex mb-5 justify-content-center">
-        <div class="col-lg-4 col-md-6 col-12 btn btn-secondary" (click)="toggleDiaryEntryView()" *ngIf="userHasUpdatePermission() && userHasDeletePermission() && userHasCreatePermission()">
+        <div class="col-lg-4 col-md-6 col-12 btn btn-secondary" (click)="toggleDiaryEntryView()" *ngIf="hasUpdatePermission && hasDeletePermission && hasCreatePermission">
             Currently viewing as : 
             <span *ngIf="diaryEntryView"> Diary entry </span>
             <span *ngIf="!diaryEntryView"> Encounter list </span>
@@ -8,7 +8,7 @@
     </div>
 
     <!-- Insert new first Encounter -->
-    <div *ngIf="!diaryEntryView && userHasUpdatePermission() && userHasDeletePermission() && userHasCreatePermission()" class="expand row">
+    <div *ngIf="!diaryEntryView && hasUpdatePermission && hasDeletePermission && userHasCreatePermission" class="expand row">
         <div class="col-md-3 col-0"></div>
         <div class="col-md-6 d-flex justify-content-around">
             <div class="btn btn-primary" (click)="toggleEncounterCreateState(-1)">
