--- a/src/app/components/utility/edit-toggle/edit-toggle.component.html
+++ b/src/app/components/utility/edit-toggle/edit-toggle.component.html
@@ -1,4 +1,5 @@
-<a class="btn btn-secondary float-right" routerLink="{{link}}" 
-*ngIf="userHasUpdatePermission()">
+<a class="btn btn-secondary float-right" 
+routerLink="{{link}}" 
+*ngIf="hasUpdatePermission">
     <i [ngClass]="{'fa': true, 'fa-pencil': !isInUpdateState, 'fa-times': isInUpdateState}" id="edit-article"></i>
 </a>
