--- a/src/app/components/utility/location-accordion/location-accordion.component.html
+++ b/src/app/components/utility/location-accordion/location-accordion.component.html
@@ -1,4 +1,4 @@
-<h4>Locations of Interest <i class="fa fa-plus icon ml-1" [ngClass]="{'d-none': !userHasCreatePermission()}" routerLink="create"></i></h4>
+<h4>Locations of Interest <i class="fa fa-plus icon ml-1" [ngClass]="{'d-none': !hasCreatePermission}" routerLink="create"></i></h4>
 
 <ngb-accordion [closeOthers]="true" (panelChange)="onPanelChange($event)">
     <ngb-panel id="static-{{i}}" *ngFor="let location of sublocations; let i = index">
