--- a/src/app/components/utility/quote-gallery/quote-gallery.component.html
+++ b/src/app/components/utility/quote-gallery/quote-gallery.component.html
@@ -18,7 +18,7 @@
     <div class="row">
         <div 
         class="btn btn-secondary col-md-3" 
-        [ngClass]="{'d-none': !userHasCreatePermission()}" 
+        [ngClass]="{'d-none': !hasCreatePermission}" 
         (click)="toggleCreateState()"
         >
             Add Quote
