--- a/src/app/components/utility/timestamp/timestamp.component.html
+++ b/src/app/components/utility/timestamp/timestamp.component.html
@@ -11,7 +11,7 @@
     <div class="col-1 px-0">
         <i 
         class="icon fa fa-trash delete-timestamp" 
-        [ngClass]="{'d-none': !userHasDeletePermission()}" 
+        [ngClass]="{'d-none': !hasDeletePermission}"
         (click)="toggleDeleteState()"
         ></i>
     </div>
