Fixed item being unable to upload image
The issue was that the article_type was used to infer the field name of a field. That one was using a plural "items" where it should have used singular "item". That caused the bug

--- a/src/app/components/articles/item-article/item-article.component.html
+++ b/src/app/components/articles/item-article/item-article.component.html
@@ -25,7 +25,7 @@
 
         <!-- Image Gallery -->
         <app-image-gallery
-        [article_type]="'items'"
+        [article_type]="'item'"
         [article_pk]="this.articleData.pk"
         [images]="this.articleData.images"
         ></app-image-gallery>
