Removed order index from template - that shouldn't have been there in the first place

--- a/src/app/components/utility/diary-entry-encounter/diary-entry-encounter.component.html
+++ b/src/app/components/utility/diary-entry-encounter/diary-entry-encounter.component.html
@@ -6,7 +6,7 @@ class="container"
     <!-- Encounter Heading -->
     <div class="row">
         <h4 class="heading col-12">
-            {{ cardData.title }} - {{cardData.order_index}}
+            {{ cardData.title }}
             
             <!-- Edit Toggler + Cut Toggler-->
             <div class="float-right flex-row" [ngClass]="{'d-none': hasUpdatePermission || diaryEntryView, 'd-flex': hasUpdatePermission && !diaryEntryView}">
