--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,8 @@
 <!-- Warning Displaying that Safari is not supported -->
 <div class="alert alert-warning alert-dismissable fade show mb-0 d-flex align-items-center" role="alert" *ngIf="showSafariWarning">
     <strong class="flex-1">
-        This project does not support Safari or any browser on iOS for that matter. 
+        This project does not support Safari or any browser on iOS for that matter. The latter due to some unexplainable bugs occurring
+        when loading some of the pages of the project for inexplicable reasons (tested with Iphone and Ipad 11.08.2021 on Safari and Chrome).
         Given the pain that it is to develop for Apple hardware without owning apple devices, and given that I neither am
         rich enough to own said devices nor see myself paying for emulation services to be able to get it to run, 
         I ask for your understanding. <br>
