Fixed close icon, as it wasn't an icon and wasn't using pointer

--- a/src/app/components/utility/session-update-modal/session-update-modal.component.html
+++ b/src/app/components/utility/session-update-modal/session-update-modal.component.html
@@ -3,7 +3,7 @@
     <div class="modal-header">
         <h4 class="modal-title" id="modal-basic-title">Update {{ model.name }}</h4>
         <div class="close" aria-label="Close" (click)="modal.dismiss()">
-            <span aria-hidden="true">&times;</span>
+            <span aria-hidden="true" class="fa fa-times pointer"></span>
         </div>
     </div>
 
