--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -28,3 +28,7 @@ router-outlet + ::ng-deep * {
              display: block;   
         }
 }
+
+.base-page{
+        touch-action: pan-y !important;
+}
