Added it back in, apparently its necessary

--- a/src/app/components/utility/recently-updated-articles-list/recently-updated-articles-list.component.html
+++ b/src/app/components/utility/recently-updated-articles-list/recently-updated-articles-list.component.html
@@ -2,6 +2,7 @@
     <!-- List Heading -->
     <h3 class="row justify-content-center align-items-center">
         <span class="">Recent Updates</span>
+        <i class="ml-3 spinner-border" *ngIf="!articles"></i>
     </h3>
 
     <div class="row">
