--- a/src/app/components/utility/user-row/user-row.component.html
+++ b/src/app/components/utility/user-row/user-row.component.html
@@ -45,7 +45,7 @@
 
     <!-- Delete Column -->
     <div class="d-flex align-items-center justify-content-center" [ngClass]="{'col-sm-1 col-3': !isDeleteState, 'col-sm-4 col-12': isDeleteState}" *ngIf="user.is_active">
-        <span *ngIf="!isDeleteState; else userDelete" class="fa fa-trash icon" (click)="toggleDeleteState()"></span>
+        <span *ngIf="!isDeleteState; else userDelete" class="fa fa-trash icon" (click)="toggleDeleteState()" placement="top" [ngbTooltip]="'Delete user ?'"></span>
     </div>
 </div>
 
