--- a/src/app/components/home2/home2.component.html
+++ b/src/app/components/home2/home2.component.html
@@ -36,7 +36,7 @@
 
     <!-- News -->
     <app-recently-updated-articles-list
-    
+    [campaign]="campaign"
     ></app-recently-updated-articles-list>
     
 
